fix no usuario controller